tests/NormalTests/paczka1/small_fuzzy/60987786.err
Error in line 3: TMp S320 32,9
Error in line 5: TMp A500 93,4
Error in line 7: TMp A666 53,5
Error in line 12: TMp S320 233,Z
